# project

./: .gitignore  README.md
.github/workflows/: ci.yml
cosmiq-api/: .env.example  main.py  pyproject.toml  requirements.txt
cosmiq-api/core/: config.py  security.py
cosmiq-api/models/: __init__.py  schemas.py
cosmiq-api/routers/: chart.py  health.py  insight.py  transits.py
cosmiq-api/services/: aspects.py  chart.py  ephemeris.py  insight.py  transits.py
cosmiq-api/tests/: test_chart.py  test_health.py  test_insight.py  test_transits.py
cosmiq-web/: .env.example  middleware.ts  package-lock.json  package.json
cosmiq-web/app/: globals.css  layout.tsx  page.tsx
cosmiq-web/app/dashboard/: layout.tsx
cosmiq-web/app/dashboard/chart/: page.tsx
cosmiq-web/app/dashboard/forecast/: page.tsx
cosmiq-web/app/offline/: page.tsx
cosmiq-web/components/: PwaRegister.tsx
cosmiq-web/components/auth/: LoginForm.tsx  LogoutButton.tsx
cosmiq-web/components/chart/: ChartWorkbench.tsx
cosmiq-web/components/dashboard/: DashboardNav.tsx  SignalWorkbenches.tsx
cosmiq-web/lib/: api.ts  session.ts
cosmiq-web/public/: manifest.json  sw.js
docs/: COSMIQ_MASTER_PROMPT.md  api-contracts.md  architecture.md  data-rag-cache.md  delivery-plan.md  risk-and-moat.md  security-observability.md
docs/adr/: 0001-bff-pattern.md  0002-redis-cache-segmentation.md  0003-vector-retrieval-strategy.md  0004-deterministic-engine-rag-boundary.md  0005-calendar-data-minimization.md  0006-encryption-key-management.md  0007-async-forecast-workflow.md  0008-audit-evidence-retention.md
(+6 files in other folders)
