[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmiq-api"
version = "0.1.0"
description = "COSMIQ FastAPI backend scaffold"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pyswisseph>=2.10.3.2,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "models", "routers", "services"]
